# threed

./: .clang-format  .clang-tidy  .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
src/: main.cpp
